feat: allow move services instead of copy when merged propagation to integration environments

--- a/federation-registry-frontend/src/config.json
+++ b/federation-registry-frontend/src/config.json
@@ -4,5 +4,6 @@
     "tenant_2":"http://localhost:5000/"
   },
   "basename": "/",
-  "testing_instance": true
+  "testing_instance": true,
+  "merge_environments_on_deploy": true
 }
